// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submit shared handler process method should submit JCL contained within a data-set if requested 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": undefined,
}
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested 2`] = `undefined`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested 3`] = `"Submitted JCL contained in \\"dataset\\": \\"DATA.SET\\""`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and view all spool content 1`] = `"Spool file: %s (ID #%d, Step: %s)"`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and view all spool content 2`] = `"FakeData1"`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and view all spool content 3`] = `"Spool file: %s (ID #%d, Step: %s)"`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and view all spool content 4`] = `"FakeData2"`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and view all spool content 5`] = `
Array [
  Object {
    "data": "FakeData1",
    "ddName": "fakeDD1",
    "id": 1,
    "stepName": "fakeStep1",
  },
  Object {
    "data": "FakeData2",
    "ddName": "fakeDD2",
    "id": 2,
    "stepName": "fakeStep2",
  },
]
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and view all spool content 6`] = `"Submitted JCL contained in \\"dataset\\": \\"DATA.SET\\""`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for active 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "CC 0000",
    "status": "OUTPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for active 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "CC 0000",
  "status": "OUTPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for active 3`] = `"Submitted JCL contained in \\"dataset\\": \\"DATA.SET\\""`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for output 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "CC 0000",
    "status": "OUTPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for output 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "CC 0000",
  "status": "OUTPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for output 3`] = `"Submitted JCL contained in \\"dataset\\": \\"DATA.SET\\""`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "UNKNOWN",
    "status": "INPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "UNKNOWN",
  "status": "INPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested 3`] = `"Submitted JCL contained in \\"local-file\\": \\"test.txt\\""`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested and view all spool content 1`] = `"Spool file: %s (ID #%d, Step: %s)"`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested and view all spool content 2`] = `"FakeData1"`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested and view all spool content 3`] = `"Spool file: %s (ID #%d, Step: %s)"`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested and view all spool content 4`] = `"FakeData2"`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested and view all spool content 5`] = `
Array [
  Object {
    "data": "FakeData1",
    "ddName": "fakeDD1",
    "id": 1,
    "stepName": "fakeStep1",
  },
  Object {
    "data": "FakeData2",
    "ddName": "fakeDD2",
    "id": 2,
    "stepName": "fakeStep2",
  },
]
`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested and view all spool content 6`] = `"Submitted JCL contained in \\"local-file\\": \\"test.txt\\""`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": undefined,
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested 2`] = `undefined`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested 3`] = `"Submitted JCL contained in \\"uss-file\\": \\"undefined\\""`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and view all spool content 1`] = `"Spool file: %s (ID #%d, Step: %s)"`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and view all spool content 2`] = `"FakeData1"`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and view all spool content 3`] = `"Spool file: %s (ID #%d, Step: %s)"`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and view all spool content 4`] = `"FakeData2"`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and view all spool content 5`] = `
Array [
  Object {
    "data": "FakeData1",
    "ddName": "fakeDD1",
    "id": 1,
    "stepName": "fakeStep1",
  },
  Object {
    "data": "FakeData2",
    "ddName": "fakeDD2",
    "id": 2,
    "stepName": "fakeStep2",
  },
]
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and view all spool content 6`] = `"Submitted JCL contained in \\"uss-file\\": \\"undefined\\""`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for active 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "CC 0000",
    "status": "OUTPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for active 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "CC 0000",
  "status": "OUTPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for active 3`] = `"Submitted JCL contained in \\"uss-file\\": \\"undefined\\""`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for output 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "CC 0000",
    "status": "OUTPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for output 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "CC 0000",
  "status": "OUTPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for output 3`] = `"Submitted JCL contained in \\"uss-file\\": \\"undefined\\""`;
